add new animations;

--- a/index.html
+++ b/index.html
@@ -507,6 +507,20 @@
         </div>
     </section>
 
+    <section class="stacked-section">
+        <div class="stacked-container">
+            <div class="stacked-block">1</div>
+            <div class="stacked-block">2</div>
+            <div class="stacked-block">3</div>
+            <div class="stacked-block">4</div>
+            <div class="stacked-block">5</div>
+            <div class="stacked-block">6</div>
+            <div class="stacked-block">7</div>
+            <div class="stacked-block">8</div>
+            <!-- і т.д. -->
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
