--- a/index.html
+++ b/index.html
@@ -219,28 +219,37 @@
             <button class="morphic-cta morphic-cta-secondary">See More Success Stories</button>
           </div>
         </div>
-        <div class="morphic-visual">
-          <div class="morphic-glow"></div>
-          <svg id="blob" class="morphic-blob" viewBox="0 0 400 400" width="400" height="400" aria-hidden="true">
-            <path id="blob-path-1" d="M200,60Q320,100,300,200Q280,300,200,340Q120,300,100,200Q80,100,200,60Z" fill="url(#morphic-gradient)"/>
-            <path id="blob-path-2" d="M200,80Q320,160,260,240Q200,320,120,260Q80,160,200,80Z" fill="url(#morphic-gradient)" style="display:none;"/>
-            <path id="blob-path-3" d="M200,70Q330,130,270,220Q200,310,110,220Q70,130,200,70Z" fill="url(#morphic-gradient)" style="display:none;"/>
-            <defs>
-              <linearGradient id="morphic-gradient" x1="0" y1="0" x2="1" y2="1">
-                <stop offset="0%" stop-color="#00A0E3"/>
-                <stop offset="100%" stop-color="#70D5FF"/>
-              </linearGradient>
-            </defs>
-          </svg>
-          <svg class="morphic-particles" width="400" height="400" aria-hidden="true">
-            <circle cx="80" cy="120" r="8" fill="#70D5FF"/>
-            <circle cx="320" cy="90" r="6" fill="#00A0E3"/>
-            <circle cx="340" cy="300" r="5" fill="#005DAF"/>
-            <circle cx="60" cy="280" r="7" fill="#00A0E3"/>
-            <circle cx="200" cy="370" r="4" fill="#70D5FF"/>
-          </svg>
-          <div class="morphic-confetti" aria-hidden="true"></div>
-        </div>
+                <div class="morphic-visual">
+                    <div class="tooth-orb" aria-hidden="true">
+                        <div class="tooth-core">
+                                            <svg class="tooth-simple" viewBox="0 0 120 150" width="240" height="260" role="img" aria-label="Tooth icon">
+                                                <defs>
+                                                    <linearGradient id="tooth2d-fill" x1="0" y1="0" x2="0" y2="1">
+                                                        <stop offset="0%" stop-color="#ffffff"/>
+                                                        <stop offset="65%" stop-color="#f2fbff"/>
+                                                        <stop offset="100%" stop-color="#e0f6ff"/>
+                                                    </linearGradient>
+                                                    <linearGradient id="tooth2d-stroke" x1="0" y1="0" x2="1" y2="1">
+                                                        <stop offset="0%" stop-color="#00A0E3" stop-opacity="0.6"/>
+                                                        <stop offset="100%" stop-color="#70D5FF" stop-opacity="0.3"/>
+                                                    </linearGradient>
+                                                    <filter id="tooth2d-shadow" x="-25%" y="-25%" width="150%" height="150%">
+                                                        <feDropShadow dx="0" dy="6" stdDeviation="8" flood-color="#00A0E3" flood-opacity="0.15" />
+                                                    </filter>
+                                                </defs>
+                                                <path class="tooth2d-outline" filter="url(#tooth2d-shadow)" fill="url(#tooth2d-fill)" stroke="url(#tooth2d-stroke)" stroke-width="1.4" d="M60 12c9 0 16 3 22 8 4 3 6 4 9 3 6-1 12 6 12 18s-3 30-8 44c-4 11-8 18-13 21-6 4-11 3-17-2-2-2-4-4-5-6-1 2-3 4-5 6-6 5-11 6-17 2-5-3-9-10-13-21-5-14-8-32-8-44s6-19 12-18c3 .5 5 0 9-3 6-5 13-8 22-8Z"/>
+                                                <path class="tooth2d-highlight" fill="#ffffff" fill-opacity="0.7" d="M46 40c3-4 9-6 14-4 4 1.6 7 5.3 7.8 10.7.6 4.1.1 8.6-1.6 13.9-1.8 5.3-4.6 9-7.3 11.2-1.3 1-3.5 1.1-4.9.1-8.9-6.1-15.4-25-8-31.9Z"/>
+                                            </svg>
+                            <div class="spark-layer" aria-hidden="true">
+                                <div class="spark s1"></div>
+                                <div class="spark s2"></div>
+                                <div class="spark s3"></div>
+                                <div class="spark s4"></div>
+                                <div class="spark s5"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
       </div>
     </section>
 
