uodate stacked section;

--- a/index.html
+++ b/index.html
@@ -508,16 +508,18 @@
     </section>
 
     <section class="stacked-section">
-        <div class="stacked-container">
-            <div class="stacked-block">1</div>
-            <div class="stacked-block">2</div>
-            <div class="stacked-block">3</div>
-            <div class="stacked-block">4</div>
-            <div class="stacked-block">5</div>
-            <div class="stacked-block">6</div>
-            <div class="stacked-block">7</div>
-            <div class="stacked-block">8</div>
-            <!-- і т.д. -->
+        <div class="stacked-inner">
+            <div class="stacked-container">
+                <div class="stacked-block">1</div>
+                <div class="stacked-block">2</div>
+                <div class="stacked-block">3</div>
+                <div class="stacked-block">4</div>
+                <div class="stacked-block">5</div>
+                <div class="stacked-block">6</div>
+                <div class="stacked-block">7</div>
+                <div class="stacked-block">8</div>
+                <!-- і т.д. -->
+            </div>
         </div>
     </section>
 
