added new block

--- a/index.html
+++ b/index.html
@@ -51,7 +51,37 @@
         </div>
     </section>
 
-    <!-- 2. Courses Slider Section with Horizontal Scroll -->
+    <!-- 2. Why Smooth Scroll (Sticky Title) -->
+    <section class="home_why__WN_ax" data-lenis-scroll-snap-align="start">
+        <div class="layout-grid">
+            <h2 class="home_sticky__s8_O2 h2">
+                <span class="appear-title_title__YdnkI appear-title_visible__5aNQU" aria-label="Why smooth scroll?">
+                    <span class="appear-title_line__xSB5T" aria-hidden="true" style="text-align: start; --i: 0;"><span>Why </span></span>
+                    <span class="appear-title_line__xSB5T" aria-hidden="true" style="text-align: start; --i: 1;"><span>smooth </span></span>
+                    <span class="appear-title_line__xSB5T" aria-hidden="true" style="text-align: start; --i: 2;"><span>scroll?</span></span>
+                </span>
+            </h2>
+            <aside class="home_features__8F37d">
+                <div class="home_feature__sub9k">
+                    <p class="p">We’ve heard all the reasons to not use smooth scroll. It feels hacky. It’s inaccessible. It’s not performant. It’s over-engineered. And historically, those were all true. But we like to imagine things as they could be, then build them. So, why should you use smooth scroll?</p>
+                </div>
+                <div class="home_feature__sub9k">
+                    <h3 class="home_title__Ddv9x h4">Create more immersive interfaces</h3>
+                    <p class="p">Unlock the creative potential and impact of your web experiences. Smoothing the scroll pulls users into the flow of the experience that feels so substantial that they forget they’re navigating a web page.</p>
+                </div>
+                <div class="home_feature__sub9k">
+                    <h3 class="home_title__Ddv9x h4">Normalize all your user inputs</h3>
+                    <p class="p">Give all your users the same (dope) experience whether they’re using trackpads, mouse wheels, or otherwise. With smooth scroll, you control how silky, heavy, or responsive the experience should be — no matter the input. Magic!</p>
+                </div>
+                <div class="home_feature__sub9k">
+                    <h3 class="home_title__Ddv9x h4">Make your animations flawless</h3>
+                    <p class="p">Synchronization with native scroll is not reliable. Those jumps and delays with scroll-linked animations are caused by multi-threading, where modern browsers run animations/effects asynchronously with the scroll. Smooth scroll fixes this.</p>
+                </div>
+            </aside>
+        </div>
+    </section>
+
+    <!-- 3. Courses Slider Section with Horizontal Scroll -->
     <section id="courses" class="courses-section">
         <div class="courses-header">
             <div class="container">
